--- a/client/public/homes.css
+++ b/client/public/homes.css
@@ -13,20 +13,86 @@ body {
     display: block;
 }
 
-.wrapper.bs4 {
+.wrapper.bs4-hom {
     background-color: #fff;
+}
+
+.wrapper.bs4-man {
+    background-image: url("/Images/Mansion\ Background.jpg");
+    background-color: #cccccc; 
+    height: auto; 
+    min-height: 750pt;
+    background-position: center; 
+    background-repeat: no-repeat; 
+    background-size: cover; 
+}
+
+.wrapper.bs4-rur {
+    background-image: url("/Images/Rural\ Background.jpg");
+    background-color: #cccccc; 
+    height: auto; 
+    min-height: 750pt;
+    background-position: center; 
+    background-repeat: no-repeat; 
+    background-size: cover; 
+}
+
+.wrapper.bs4-tin {
+    background-image: url("/ImagesTiny\ House\ Background.jpg"); 
+    background-color: #cccccc;
+    height: auto; 
+    min-height: 750pt;
+    background-position: center; 
+    background-repeat: no-repeat; 
+    background-size: cover; 
 }
 
 
 .clp-section {
+    background-color: #6265f3;
     height: auto;
     display: flex!important;
     flex-wrap: wrap;
     position: relative;
     overflow: hidden;
     box-sizing: border-box;
+    padding-bottom: 25px;
 }
 
+.clp-section-hom-1 {
+    background-image: url("/Images/Home\ Sky\ Background.jpg"); 
+    background-color: #cccccc;
+    height: auto; 
+    background-position: center; 
+    background-repeat: no-repeat; 
+    background-size: cover; 
+}
+
+.clp-section-hom-2 {
+    background-image: url("/Images/Subburbs\ Background.jpg"); 
+    background-color: #cccccc;
+    height: auto; 
+    background-position: center; 
+    background-repeat: no-repeat; 
+    background-size: cover; 
+}
+
+.clp-section-hom-3 {
+    background-color: #8cdeeb;
+    height: auto; 
+    width: 100%;
+    background-position: center; 
+    background-repeat: no-repeat; 
+    background-size: cover; 
+}
+
+.clp-section-space {
+    background-color: #8cdeeb;
+    height: 50px; 
+    background-position: center; 
+    background-repeat: no-repeat; 
+    background-size: cover; 
+}
 
 .d-flex {
     display: -ms-flexbox!important;
@@ -123,7 +189,19 @@ body {
     -ms-flex: 0 0 33.333333%;
     flex: 0 0 33.333333%;
     max-width: 33.333333%;
-}
+ }
+
+ .col-eq-1 {
+    float: left;
+    width: 33.33%;
+    padding: 5px;
+ }
+
+ .row::after{
+    content: "";
+    clear:both;
+    display: table;
+ }
 
 .col-md-6 {
     -ms-flex: 0 0 50%;
@@ -137,6 +215,21 @@ body {
     padding-right: 15px;
     padding-left: 15px;
 }
+
+.col-int {
+    position: relative;
+    width: 50%;
+    padding-right: 15px;
+    padding-left: 15px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.center {
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+  }
 
 div {
     display: block;
@@ -204,14 +297,14 @@ div {
 .btn {
     display: inline-block;
     font-weight: 400;
-    color: #212529;
+    color: #ffffff;
     text-align: center;
     vertical-align: middle;
     -webkit-user-select: none;
     -moz-user-select: none;
     -ms-user-select: none;
     user-select: none;
-    background-color: transparent;
+    background-color: #212529;
     border: 1px solid transparent;
     padding: 0.375rem 0.75rem;
     font-size: 1rem;
@@ -239,7 +332,7 @@ div {
 
 .homebutton {
     right: 0px;
-    width: 125px;
+    width: 135px;
     padding-top: 20px;
     padding-right: 20px;
     position: fixed;
