--- a/client/public/homes.css
+++ b/client/public/homes.css
@@ -38,7 +38,7 @@ body {
 }
 
 .wrapper.bs4-tin {
-    background-image: url("/ImagesTiny\ House\ Background.jpg"); 
+    background-image: url("/Images/Tiny\ House\ Background.jpg"); 
     background-color: #cccccc;
     height: auto; 
     min-height: 750pt;
