--- a/client/css/cs499.webflow.css
+++ b/client/css/cs499.webflow.css
@@ -1404,6 +1404,110 @@
   }
 }
 
-#map {
-height: 100%;
+
+@media screen and (max-width: 1100px) {
+
+  .formHeading{
+      text-align: center;
+      font-size: 3.5rem;
+      padding: 7%;
+  }
+
+  .name,
+  .email,
+  .textArea{
+      border: 1px solid black;
+      min-width: 60%;
+      margin-left: 20%;
+      margin-right: 20%;
+      padding-bottom: 20px;
+      padding-top: 20px;
+      margin-bottom: 5%;
+  }
+
+  .name::placeholder,
+  .email::placeholder,
+  .textArea::placeholder{
+      font-size: 1.25rem;
+      padding-left: 5px;
+  }
+
+
+  .textArea{
+      padding-right: 0;
+      padding-left: 0;
+      padding-bottom: 100px;
+  }
+
+  .submitButton{
+      margin-right: 20%;
+      margin-left: 20%;
+      min-width: 60%;
+      padding-top: 15px;
+      padding-bottom: 15px;
+      background: #b872ae;
+      margin-bottom: 20px;
+      margin-bottom: 4.5%;
+  }
+
+  .submitButton:hover{
+      cursor: pointer;
+  }
+  
+  .submitButton span{
+      color: whitesmoke;
+      border-bottom: 1.5px solid whitesmoke;
+      font-size: 1.5rem;
+  }
 }
+
+ .formHeading{
+      text-align: center;
+      font-size: 3.5rem;
+      padding: 2%;
+  }
+
+  .name,
+  .email,
+  .textArea{
+      border: 1px solid black;
+      min-width: 70%;
+      margin-left: 15%;
+      margin-right: 15%;
+      padding-bottom: 20px;
+      padding-top: 20px;
+      margin-bottom: 2%;
+  }
+
+  .name::placeholder,
+  .email::placeholder,
+  .textArea::placeholder{
+      font-size: 1.25rem;
+      padding-left: 5px;
+  }
+
+
+  .textArea{
+      padding-right: 0;
+      padding-left: 0;
+      padding-bottom: 100px;
+  }
+
+  .submitButton{
+      margin-right: 15%;
+      margin-left: 15%;
+      min-width: 70%;
+      padding-top: 15px;
+      padding-bottom: 15px;
+      background: #b872ae;
+  }
+
+  .submitButton:hover{
+      cursor: pointer;
+  }
+  
+  .submitButton span{
+      color: whitesmoke;
+      border-bottom: 1.5px solid whitesmoke;
+      font-size: 1.5rem;
+  }
