--- a/client/css/cs499.webflow.css
+++ b/client/css/cs499.webflow.css
@@ -86,7 +86,7 @@
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
-  min-height: 650px;
+  min-height: 500px;
   padding-right: 10px;
   padding-left: 10px;
   -webkit-box-pack: center;
@@ -155,10 +155,14 @@
 
 .paragraph-5 {
   color: #fff;
+  font-size: 20px;
+  line-height: 25px;
 }
 
 .paragraph-6 {
   color: #fff;
+  font-size: 20px;
+  line-height: 25px;
 }
 
 .text-span {
@@ -171,10 +175,14 @@
 
 .paragraph-7 {
   color: #fff;
+  font-size: 20px;
+  line-height: 25px;
 }
 
 .paragraph-8 {
   color: #fff;
+  font-size: 20px;
+  line-height: 25px;
 }
 
 .text-span-3 {
@@ -281,6 +289,7 @@
 
 .paragraph-10 {
   color: #fffcfc;
+  font-size: 20px;
 }
 
 .text-span-9 {
@@ -375,11 +384,13 @@
 .paragraph-14 {
   margin-bottom: 0px;
   color: snow;
+  font-size: 20px;
 }
 
 .heading-7 {
   margin-bottom: 0px;
   color: #fff;
+  font-size: 40px;
 }
 
 .heading-8 {
@@ -402,6 +413,7 @@
 .paragraph-16 {
   padding-bottom: 60px;
   color: #fff;
+  font-size: 20px;
 }
 
 .text-span-15 {
@@ -485,6 +497,8 @@
 
 .paragraph-21 {
   color: #fff;
+  font-size: 30px;
+  line-height: 40px;
 }
 
 .div-block-17 {
@@ -538,11 +552,11 @@
 }
 
 .paragraph-22 {
-  margin-right: 300px;
-  margin-left: 300px;
+  margin-right: 140px;
+  margin-left: 140px;
   padding-bottom: 10px;
   color: #141314;
-  font-size: 14px;
+  font-size: 40px;
   font-weight: 400;
   text-align: center;
 }
@@ -938,6 +952,7 @@
 
 .paragraph-23 {
   color: #fffcfc;
+  font-size: 18px;
 }
 
 .paragraph-24 {
@@ -970,6 +985,7 @@
 
 .paragraph-29 {
   color: #fff;
+  font-size: 18px;
 }
 
 .paragraph-30 {
@@ -1007,6 +1023,113 @@
   -webkit-align-items: center;
   -ms-flex-align: center;
   align-items: center;
+}
+
+.paragraph-32 {
+  font-size: 30px;
+  line-height: 40px;
+}
+
+.paragraph-33 {
+  font-size: 20px;
+}
+
+.paragraph-34 {
+  font-size: 20px;
+}
+
+.paragraph-35 {
+  font-size: 20px;
+}
+
+.paragraph-36 {
+  font-size: 20px;
+  line-height: 30px;
+}
+
+.paragraph-37 {
+  font-size: 20px;
+}
+
+.hero-stack {
+  position: relative;
+  padding: 80px 30px;
+  border-bottom: 1px solid #e4ebf3;
+  background-color: #f5f7fa;
+}
+
+.container-10 {
+  width: 100%;
+  max-width: 940px;
+  margin-right: auto;
+  margin-left: auto;
+}
+
+.hero-wrapper-two {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  max-width: 750px;
+  margin-right: auto;
+  margin-left: auto;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-pack: start;
+  -webkit-justify-content: flex-start;
+  -ms-flex-pack: start;
+  justify-content: flex-start;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  text-align: center;
+}
+
+.margin-bottom-24px {
+  margin-bottom: 24px;
+}
+
+.button-primary {
+  padding: 12px 25px;
+  background-color: #1a1b1f;
+  -webkit-transition: all 200ms ease;
+  transition: all 200ms ease;
+  color: #fff;
+  font-size: 12px;
+  line-height: 20px;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+}
+
+.button-primary:hover {
+  background-color: #32343a;
+  color: #fff;
+}
+
+.button-primary:active {
+  background-color: #43464d;
+}
+
+.hero-image {
+  width: 100%;
+  margin-top: 50px;
+}
+
+.paragraph-38 {
+  font-size: 20px;
+}
+
+.paragraph-39 {
+  font-size: 20px;
+  line-height: 25px;
+}
+
+.paragraph-40 {
+  font-size: 20px;
 }
 
 @media screen and (max-width: 991px) {
@@ -1058,6 +1181,8 @@
   .paragraph-22 {
     margin-right: 140px;
     margin-left: 140px;
+    clear: left;
+    font-size: 30px;
   }
 
   .div-block-26 {
@@ -1119,6 +1244,10 @@
   .div-block-40 {
     padding-right: 60px;
     padding-left: 60px;
+  }
+
+  .container-10 {
+    max-width: 728px;
   }
 }
 
@@ -1267,6 +1396,10 @@
     -ms-flex-align: center;
     align-items: center;
   }
+
+  .hero-stack {
+    padding: 60px 15px;
+  }
 }
 
 @media screen and (max-width: 479px) {
@@ -1343,6 +1476,7 @@
   .paragraph-22 {
     margin-right: 10px;
     margin-left: 10px;
+    font-size: 20px;
   }
 
   .div-block-26 {
@@ -1402,7 +1536,12 @@
     height: 23vw;
     margin-left: 3px;
   }
+
+  .container-10 {
+    max-width: none;
+  }
 }
+
 
 
 @media screen and (max-width: 1100px) {
